# mailrecon

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml  release.sh
mailrecon/: __init__.py  __main__.py  core.py  types.py
mailrecon/providers/: __init__.py  base.py  gmail.py  yahoo.py
tests/: test_core.py  test_gmail.py  test_live.py  test_yahoo.py
