[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mailrecon"
version = "0.1.0"
description = "Email account existence validation tool"
authors = [{ name = "krazybean" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
mailrecon = "mailrecon.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mailrecon*"]
