[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mailrecon"
version = "0.1.1"
description = "Detect whether an email account exists using provider-level validation flows"
authors = [{ name = "krazybean" }]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["email", "validation", "osint", "cli", "security"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.scripts]
mailrecon = "mailrecon.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mailrecon*"]
